--- a/src/main/webapp/WEB-INF/views/assets/css/introduce.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/introduce.css
@@ -92,9 +92,10 @@
   display: flex;
   justify-content: space-evenly;
   padding: 10px 0 10px 0;
+  margin-top:20px;
 }
 .small_box > div {
-  border: 2px solid #34346b;
+  border: 4px solid #34346b;
   width: 17%;
   height: 100px;
   padding: 0 2px 0 2px;
@@ -103,12 +104,18 @@
   justify-content: center;
   margin: 20px 0 20px 0;
   align-items: center;
-  font-size: xx-large;
+  font-size: large;
+  font-weight:bold;
 }
 .small_box > div:hover {
   background-color: #0f0f70;
   color: aliceblue;
   transition: all 0.5s;
+}
+
+.small_box > div > a:hover{
+	color:white;
+	transition: all 0.5s;
 }
 
 @media (max-width: 900px) {
@@ -148,5 +155,21 @@
     text-align: center;
     margin-top: 20px;
     margin-bottom: 50px;
+  }
+  
+  .a:hover{
+	color:white;
+	transition: all 0.5s;
+}
+ .small_box_m > div {
+    border: 4px solid #0f0f70;
+    font-size: large;
+    color: black;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin: 10px 0;
   }
 }
