--- a/src/main/webapp/WEB-INF/views/assets/css/counsel.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/counsel.css
@@ -39,6 +39,7 @@
   margin-top: 10px;
   display: flex;
   font-size: x-large;
+  font-weight: bold;
 }
 
 .sunbon_intro {
@@ -61,14 +62,12 @@
   width: 1190px;
   margin: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 200px;
 }
 
 .sunbon_explain_photo {
-  width: 30%;
   text-align: center;
+  margin-top: 10px;
   padding: 10px 0 10px 0;
 }
 .fas {
@@ -80,15 +79,23 @@
 }
 
 .sunbon_explain_text {
-  width: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  margin-top: 20px;
+  align-items: flex-start;
+  margin-left: 20px;
 }
 .sunbon_explain_text1 {
-  font-size: large;
+  font-size: x-large;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.sunbon_explain_text2 {
+  font-size: large;
+  margin-top: 20px;
+}
+.fas fa-circle{
+	padding-bottom: 10px;
 }
 
 @media (max-width: 900px) {
