--- a/src/main/webapp/WEB-INF/views/assets/css/introduce.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/introduce.css
@@ -8,7 +8,9 @@
   justify-content: space-between;
   padding: 5px;
 }
-
+.cons_intro_name{
+	margin-top:50px;
+}
 .cons_intro_pt {
   width: 1190px;
   margin: auto;
