--- a/src/main/webapp/WEB-INF/views/assets/css/snu_main.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/snu_main.css
@@ -8,11 +8,9 @@
     margin: auto;
     margin-top: 100px;
   }
-  .notice_body {
-    padding: 10px 0;
-  }
+
   .notice_body_text {
-    padding: 5px 0;
+    margin-top:3px;
   }
 }
 
@@ -96,7 +94,8 @@
   
 }
 .notice_header_title , .notice_header_more{
-	margin-bottom:10px;
+	margin-bottom:5px;
+	margin-top:15px;
 }
 .notice_body_text {
   border-bottom: 2px solid rgba(0, 0, 0, 0.1);
@@ -165,4 +164,9 @@
 
 .card_news_body > img {
   width: 100%;
+}
+@media (max-width: 600px) {
+	  .notice_body_text {
+    margin-top:3px;
+  }
 }
