0417 모바일 디자인 완성

--- a/src/main/webapp/WEB-INF/views/assets/css/counsel.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/counsel.css
@@ -93,6 +93,7 @@
 .sunbon_explain_text2 {
   font-size: large;
   margin-top: 20px;
+  line-height: 30px;
 }
 .fas fa-circle{
 	padding-bottom: 10px;
