--- a/src/main/webapp/WEB-INF/views/assets/css/hi_detail.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/hi_detail.css
@@ -1,6 +1,83 @@
 .main_box{
 	font-family: 'NanumGothic';
 }
+.midd {
+	overflow: hidden;
+	position: relative;
+	height: 10em;
+	margin: 1em 4em 0;
+}
+
+.midd ul {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 20000px;
+	height: 10em;
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+.midd>ul>li {
+	float: left;
+	position: relative;
+	height: 10em;
+	margin-right: 1em;
+}
+
+.midd>ul>li>a {
+	display: block;
+	position: relative;
+	height: 100%;
+}
+
+.midd>ul>li>a img {
+	max-width: 100%;
+	height: 100%;
+}
+
+.next, .prev {
+	overflow: hidden;
+	display: block;
+	position: absolute;
+	bottom: 3em;
+	width: 4em;
+	height: 4em;
+	text-align: left;
+	text-indent: -1000px;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: contain;
+}
+
+.prev {
+	left: 0;
+	background-image:
+		url(https://www.moe.go.kr/img/2021Renewal/common/page_prev.svg);
+}
+
+.next {
+	right: 0;
+	background-image:
+		url(https://www.moe.go.kr/img/2021Renewal/common/page_next.svg);
+}
+
+.photo {
+	position: relative;
+	margin-bottom: 10px;
+}
+
+.on {
+	opacity: 1;
+	width: 100%;
+	height: 100%;
+	border: 0.2em solid #FC5C42;
+	box-sizing: border-box;
+	transition: opacity .2s linear;
+	margin: 0;
+	padding: 0;
+}
 .hi_detail_title {
   width: 1190px;
   margin: auto;
