--- a/src/main/webapp/WEB-INF/views/assets/css/edu.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/edu.css
@@ -48,7 +48,7 @@
   border: 2px solid #0f0f70;
   border-radius : 10px;
   padding:11px;
-  font-size: medium;
+  font-size: 17px;
   line-height: 30px;
   
 }
