--- a/src/main/webapp/WEB-INF/views/assets/css/snu_main.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/snu_main.css
@@ -26,17 +26,17 @@
 
 .menu {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	padding: 20px;
 }
 
 .menus {
-	width: 250px;
+	width: 280px;
 	height: 100px;
 	border-radius: 5px;
 	background-color: #0f0f70;
 	display: flex;
-	justify-content: center;
+	justify-content:center;
 	align-items: center;
 	color: white;
 	font-weight: bold;
@@ -51,22 +51,21 @@
 .third_left {
 	width: 40%;
 	margin-right: 10px;
-	background-color: #0f0f70;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border-right: 2px solid #0f0f70;
+	
 }
 
 .third_left>img {
-	background-color: #0f0f70;
 	height: 100px;
 	width: 100px;
 	margin: 10px 0 10px 0;
 }
 
 .third_right {
-	width: 60%;
+	margin-top:30px;
+	width: 100%;
 }
 
 .third_right_top {
